fix(nc-gui): email, phone number & url cell preview text alignment issue in form view

--- a/packages/nc-gui/assets/style.scss
+++ b/packages/nc-gui/assets/style.scss
@@ -1339,3 +1339,10 @@ svg.nc-virtual-cell-icon {
     }
   }
 }
+
+.nc-cell-field {
+  &.nc-text-transparent {
+    @apply text-transparent;
+    -webkit-text-fill-color: transparent;
+  }
+}
